--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
   border: 2px solid var(--border);
 }
 main{
+  margin: auto;
   text-align: center;
   font-size: 14pt;
 }
@@ -22,6 +23,7 @@ article{
   /* padding-top: 1em;
   padding-left: 2em; */
   padding: 2em;
+  padding-bottom: 0;
 }
 
 section{
@@ -30,7 +32,9 @@ section{
   text-align:center;
 }
 footer{
+  position: relative;
   height: 100px;
+  width: 100vw;
   background-color: var(--banner);
   border: 2px solid var(--border);
 }
@@ -57,8 +61,9 @@ footer{
 }
 .body{
   padding-left: 1em;
-  min-height: 100vh;
+  min-height: 70vh;
   padding-right: 1em;
+  
 }
 
 .title{
